--- a/index.css
+++ b/index.css
@@ -103,7 +103,7 @@ nav img {
 }
 
 #content-center {
-  height: 450px;
+  height: 100%;
   width: 100%;
   background-color: white;
   display: flex;
