--- a/index.css
+++ b/index.css
@@ -62,7 +62,7 @@ nav {
 #followbutton {
   font-weight: bold;
   color: rgb(0, 172, 238);
-  position:fixed;
+  position:absolute;
   border-style: solid;
   border-width: 1px;
   border-color: rgb(0, 172, 238);
