--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+/*Francisco Bustamante and Nicholas Chao
 /* Feel free to edit CSS of body if you'd like. We provide you the light gray background color and font family in the body styling */
 body {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
